Added aranged the elements

--- a/src/style.css
+++ b/src/style.css
@@ -4,22 +4,38 @@ body{
     padding: 5%;
 }
 .main-div{
+    position: relative;
+    left: 2%;
+    right: 2%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 .scores-part,.submit-part{
+    padding: 10px;
     width: 40%;
-    background: green;
 }
 .score-title{
   display: flex;
     flex-direction: row;
     justify-content: space-between;  
 }
+.refresh{
+    width: 20%;
+    height: 40px;
+    margin-top: 20px;
+}
 .submit-form{
-   display: flex;
-   flex-direction: column;
-   gap: 10px; 
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.name,.your-score,.submit{
+height: 30px;
+}
+.submit{
+    width: 20%;
+    position: relative;
+    left: 80%;
 }
 
