--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ input{
 .submit-part {
   padding: 10px;
   width: 40%;
+    background-color: rgb(233, 183, 122);
 }
 h1{
   font-size: 40px;
@@ -96,5 +97,5 @@ h2{
   font-weight: 500;
   border-radius: 6px;
   /* height: 40px; */
-  background-color: white;
+  background: rgb(250, 250, 252);
 }
